tests/single_instruction_translation_validation/mcsema/register-variants-samereg/cvtdq2ps_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:199:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %11)
            ^
0.03user 0.02system 0:00.12elapsed 41%CPU (0avgtext+0avgdata 27352maxresident)k
0inputs+16outputs (0major+3274minor)pagefaults 0swaps
